--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <p>Test your memory about climate change!!!</p>
 <div><a target="_blank" class="text-link" href="https://masonseder.github.io/The-Climate-App/">Home</a></div>
         <div> <a target="_blank" class="text-link" href="https://masonseder.github.io/The-Climate-App-Recources/">Resources</a> </div>
-    <div> <a target="_blank" class="text-link" href="https://app.bsd.education/share/o/fgk7gyee">Learn More</a>  </div>
- <div>   <a target="_blank" class="text-link" href="https://app.bsd.education/share/o/eq8cz65h">Trivia</a></div>
+    <div> <a target="_blank" class="text-link" href="https://masonseder.github.io/The-Climate-App-Learn-More/">Learn More</a>  </div>
+ <div>   <a target="_blank" class="text-link" href="https://masonseder.github.io/The-Climate-App-Trivia/">Trivia</a></div>
     <button onclick="quiz()">Go</button>
 
     
